Fixed extra padding on demoted tab and extra symbol in the content

--- a/templates/core/_main.sass
+++ b/templates/core/_main.sass
@@ -7,9 +7,6 @@ $grey-color: #f6f7fb
 $pink-peach-color: #fff6e1
 $grey-light-color: #aeb2bb
 
-.table-no-data 
-	padding-top: 50px
-
 .icon
 	display: inline-block
 	vertical-align: middle
